--- a/addon/v1alpha1/0000_00_addon.open-cluster-management.io_clustermanagementaddons.crd.yaml
+++ b/addon/v1alpha1/0000_00_addon.open-cluster-management.io_clustermanagementaddons.crd.yaml
@@ -262,6 +262,90 @@ spec:
                     - Placements
                     type: string
                 type: object
+              placementRefs:
+                items:
+                  properties:
+                    name:
+                      description: Name is the name of the placement
+                      minLength: 1
+                      type: string
+                    namespace:
+                      description: Namespace is the namespace of the placement
+                      minLength: 1
+                      type: string
+                    rolloutStrategy:
+                      default:
+                        type: All
+                      description: The rollout strategy to apply addon configurations
+                        change. The rollout strategy only watches the addon configurations
+                        defined in ClusterManagementAddOn.
+                      properties:
+                        mandatoryDecisionGroups:
+                          description: List of the decision groups names or indexes
+                            to apply the workload first and fail if workload did not
+                            reach successful ((not proceed to apply workload to other
+                            decision groups/clusters).
+                          items:
+                            description: MandatoryDecisionGroup set the decision group
+                              name and group index.
+                            properties:
+                              groupIndex:
+                                description: GroupIndex of the decision group should
+                                  match the placementDecisions label value with label
+                                  key cluster.open-cluster-management.io/decision-group-index
+                                format: int32
+                                type: integer
+                              groupName:
+                                description: GroupName of the decision group should
+                                  match the placementDecisions label value with label
+                                  key cluster.open-cluster-management.io/decision-group-name
+                                type: string
+                            type: object
+                          type: array
+                        maxConcurrency:
+                          description: MaxConcurrency is the max number of clusters
+                            to deploy workload concurrently. The default value for
+                            MaxConcurrency is determined from the clustersPerDecisionGroup
+                            defined in the placement->DecisionStrategy. When RolloutStrategy
+                            Type defined as ProgressivePerGroup the MaxConcurrency
+                            must not be bigger than the clustersPerDecisionGroup defined
+                            in the placement->DecisionStrategy otherwise it is the
+                            workload applier controller responsibility to re-group
+                            the placement clusters and keep track each group status.
+                          pattern: ^((100|[0-9]{1,2})%|[0-9]+)$
+                          type: string
+                        timeout:
+                          default: None
+                          description: Timeout define how long workload applier controller
+                            will wait till workload reach successful state in the
+                            cluster. Only considered for Rollout Type Progressive
+                            and ProgressivePerGroup. Timeout default value is None
+                            meaning the workload applier will not proceed apply workload
+                            to other clusters if did not reach the successful state.
+                            Timeout must be defined in [0-9h]|[0-9m]|[0-9s] format
+                            examples; 2h , 90m , 360s
+                          pattern: ^(([0-9])+[h|m|s])|None$
+                          type: string
+                        type:
+                          default: All
+                          description: Rollout strategy Types are All, Progressive
+                            and ProgressivePerGroup 1) All means apply the workload
+                            to all clusters in the decision groups at once. 2) Progressive
+                            means apply the workload to the selected clusters progressively
+                            per cluster. The workload will not be applied to the next
+                            cluster unless one of the current applied clusters reach
+                            the successful state or timeout. 3) ProgressivePerGroup
+                            means apply the workload to decisionGroup clusters progressively
+                            per group. The workload will not be applied to the next
+                            decisionGroup unless all clusters in the current group
+                            reach the successful state or timeout.
+                          type: string
+                      type: object
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
               supportedConfigs:
                 description: supportedConfigs is a list of configuration types supported
                   by add-on. An empty list means the add-on does not require configurations.
